# svgColors

./: CMakeLists.txt  ColorDelegate.qml  ColorModel.qml  LICENSE.txt  README.md  SortSelector.qml  main.cpp  main.qml  qml.qrc
